welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: missing parameter type
  else {if (hour=>20){return true}}
            ^